# glacia

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  nightly.yml  release.yml
packaging/macos/: Info.plist
src/: canvas.rs  config.rs  input.rs  main.rs  platform.rs  plugin.rs  render_cpu.rs  terminal.rs  theme.rs  unicode.rs
tools/: generate_logo.py
