[package]
name = "glacia"
version = "0.1.0"
edition = "2024"

[lints.clippy]
absolute_paths = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "warn"
expect_used = "warn"

[dependencies]
aurea = { git = "https://github.com/SkuldNorniern/aurea" }
vanta = { git = "https://github.com/SkuldNorniern/vanta" }
